--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -539,7 +539,7 @@
             //to avoid overlap of path id in svg code(id must have unique name)
             var shiftID = null;
             var deskID = null;
-            console.log(shiftNum, deskNum, seatNum);
+            // console.log(shiftNum, deskNum, seatNum);
             switch (deskNum) {
                 case "1":
                     for (let i = 1; i <= 3; i++) {
