calendar schedule test

--- a/raon-control/test/calendar.html
+++ b/raon-control/test/calendar.html
@@ -92,10 +92,10 @@
 
 <body>
     <div style="display: flex;">
-        <button id="last-button" onclick="prevCalendar()">&#10094;</button>
+        <button id="last-button" onclick="prevCalendar()" style="border-radius: 0px;">&#10094;</button>
 
         <div id="year">January 2021</div>
-        <button id="next-button" onclick="nextCalendar()">&#10095;</button>
+        <button id="next-button" onclick="nextCalendar()" style="border-radius: 0px;">&#10095;</button>
     </div>
 
     <div style="display: flex;">
@@ -329,7 +329,7 @@
         var yearMonth = today.getFullYear() + '-' + today.getMonth() + 1;
 
         var scheduleList = [
-            { date: "2021-01-10", days: 2, title: "Beam Commissioning" },
+            { date: "2021-01-10", days: 9, title: "Beam Commissioning" },
             { date: "2021-01-21", days: 3, title: "Beam Commissioning" }
         ];
 
@@ -340,21 +340,28 @@
 
         var list = dateArray[0] + '-' + dateArray[1];
         if (yearMonth == list) {
+            var firstDate = new Date(today.getFullYear(), today.getMonth(), 1);
+            var startIndex = firstDate.getDay() + parseInt(dateArray[2]) - 1;
+            var endIndex = parseInt(startIndex) + parseInt(dateArray[2]);
+            // console.log(endIndex);
+            for(let i = startIndex; i < endIndex; i++) {
+                if( i % 7 == 0) {
+                    console.log('week', i);
+                }
+            }
+
             let scheduleButton = document.createElement('BUTTON');
             let buttonText = document.createTextNode(scheduleList[0].title);
             scheduleButton.style.backgroundColor = '#283593';
             scheduleButton.style.width = 100 * scheduleList[0].days + 'px';
-            console.log(scheduleButton.style.width);
+
             scheduleButton.style.height = '24px';
             scheduleButton.appendChild(buttonText);
 
-            var listIndex = today.getDay() + parseInt(dateArray[2]) - 1;
-            dayCalss[listIndex].appendChild(scheduleButton);
+
+            dayCalss[startIndex].appendChild(scheduleButton);
+
         }
-
-
-
-        // dayCalss[0].appendChild(scheduleButton);
 
     }
 
